--- a/bbs-board/pom.xml
+++ b/bbs-board/pom.xml
@@ -9,8 +9,8 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>bbs-user</artifactId>
-    <name>bbs-user</name>
+    <artifactId>bbs-board</artifactId>
+    <name>bbs-board</name>
 
     <dependencies>
 
@@ -19,7 +19,6 @@
             <groupId>com.gsn.bbs</groupId>
             <artifactId>bbs-api</artifactId>
         </dependency>
-
         <dependency>
             <groupId>com.gsn.bbs</groupId>
             <artifactId>bbs-security</artifactId>
@@ -62,6 +61,7 @@
             <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
         </dependency>
 
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-actuator</artifactId>
@@ -103,5 +103,4 @@
             </plugin>
         </plugins>
     </build>
-
 </project>
